# MLDoctor

./: .gitignore  README.md  pyproject.toml  report.html  report.json  requirements.txt
dashboard/: Home.py
dashboard/assets/: style.css
dashboard/pages/: 1_Dataset_Health.py  2_Missing_Values.py  3_Outliers.py  4_Correlation.py  5_Recommendations.py  6_Model_Recommendation.py  7_AutoML.py  8_Export_Report.py  Visualizations.py
examples/: test_analyze.py
mldoctor/: __init__.py  analyzer.py  column_health.py  correlation.py  datatype.py  duplicates.py  feature_detector.py  health.py  imbalance.py  missing.py  ml_readiness.py  model_recommender.py  outliers.py  preprocessing.py  recommendations.py  report.py  visualizer.py
mldoctor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mldoctor/templates/: report_template.html
tests/: test_duplicates.py  test_health.py  test_missing.py  test_outliers.py
