[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mldoctor"
version = "0.1.0"
description = "Automated dataset health analysis and preprocessing recommendations."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Kevin Joel", email = "kevinjoel7.c@gmail.com" }
]

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib"
]